--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+/* FONT */
+@import url("https://api.fonts.coollabs.io/css2?family=Iceberg&display=swap");
+
 /* RESETS */
 * {
   box-sizing: border-box;
@@ -19,6 +22,9 @@ html {
 body {
   background-color: rgb(var(--bg-color-1));
   color: rgb(var(--tx-color));
+
+  font-family: "Iceberg", cursive;
+  font-size: var(--fs-400);
 }
 
 body.light-theme {
@@ -65,6 +71,16 @@ body.dark-theme .icon {
   width: 1px;
 }
 
+.h-min-100 {
+  min-height: 100vh;
+  min-height: 100svh;
+}
+
+/* Elements */
+a {
+  color: rgb(var(--tx-color));
+}
+
 /* Content */
 .arrow-nav {
   padding: 0.5rem;
@@ -87,4 +103,62 @@ body.dark-theme .icon {
 
 .arrow-nav:hover {
   scale: 1.3;
+}
+
+main {
+  width: min(800px, calc(100% - 2rem));
+  margin: 0 auto;
+}
+
+.icon {
+  width: 4rem;
+}
+
+.oma-kuva {
+  width: 100%;
+}
+
+/*  FOOTER  */
+footer {
+  width: 100%;
+  position: relative;
+  background-color: rgb(var(--bg-color-2));
+  overflow: hidden;
+}
+footer p {
+  color: rgb(var(--bg-color-1));
+  animation: marquee 50s linear 0s infinite normal;
+  white-space: nowrap;
+}
+
+footer p:nth-child(odd) {
+  animation-direction: reverse;
+}
+
+footer p.no-animation {
+  color: rgb(var(--tx-color));
+  animation: none;
+}
+
+footer .thanks {
+  position: absolute;
+  bottom: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(+50%);
+  text-align: center;
+}
+
+footer p.copyright {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+
+@keyframes marquee {
+  0% {
+    transform: translate(0, 0);
+  }
+  100% {
+    transform: translate(-100%, 0);
+  }
 }
