--- a/style.css
+++ b/style.css
@@ -24,7 +24,8 @@ body {
   color: rgb(var(--tx-color));
 
   font-family: "Iceberg", cursive;
-  font-size: var(--fs-400);
+  font-size: var(--fs-125);
+  line-height: normal;
 }
 
 body.light-theme {
@@ -51,12 +52,14 @@ body.dark-theme .icon {
 :root {
   --br-rad: 16px;
 
-  --fs-100: 0.5rem;
-  --fs-300: 1rem;
-  --fs-400: 1.25rem;
-  --fs-500: 1.5rem;
-  --fs-600: 2rem;
-  --fs-700: 4rem;
+  --fs-050: 0.5rem;
+  --fs-100: 1rem;
+  --fs-125: 1.25rem;
+  --fs-150: 1.5rem;
+  --fs-200: 2rem;
+  --fs-250: 2.5rem;
+  --fs-300: 3rem;
+  --fs-400: 4rem;
   --fs-800: 8rem;
 }
 
@@ -76,12 +79,49 @@ body.dark-theme .icon {
   min-height: 100svh;
 }
 
+.content h3.tmar-8 {
+  margin-top: 8px;
+}
+
 /* Elements */
 a {
   color: rgb(var(--tx-color));
 }
 
+main {
+  width: min(800px, calc(100% - 2rem));
+  margin: 0 auto;
+}
+
 /* Content */
+.heading h2 {
+  font-size: var(--fs-300);
+  text-align: center;
+}
+
+.content {
+  background-color: rgb(var(--bg-color-2));
+  padding: 0.5rem 1rem;
+  margin: 1rem 0;
+  border-radius: var(--br-rad);
+}
+
+.content p {
+  margin: 0 0 8px 0;
+}
+
+.content h3 {
+  margin-top: 1rem;
+  font-size: var(--fs-250);
+}
+
+.content > a {
+  display: block;
+}
+
+/* HERO */
+
+/* Arrow nav */
 .arrow-nav {
   padding: 0.5rem;
 
@@ -105,17 +145,19 @@ a {
   scale: 1.3;
 }
 
-main {
-  width: min(800px, calc(100% - 2rem));
-  margin: 0 auto;
-}
-
 .icon {
   width: 4rem;
 }
 
 .oma-kuva {
   width: 100%;
+  margin: 1rem 0;
+}
+
+.divider {
+  height: 3px;
+  background-color: rgb(var(--tx-color));
+  margin: 1rem 0;
 }
 
 /*  FOOTER  */
