--- a/style.css
+++ b/style.css
@@ -61,6 +61,8 @@ body.dark-theme .icon {
   --fs-300: 3rem;
   --fs-400: 4rem;
   --fs-800: 8rem;
+
+  --fw-400: 400;
 }
 
 /* Utility classes */
@@ -94,25 +96,61 @@ main {
 }
 
 /* Content */
+.heading {
+  display: grid;
+  place-items: center;
+  height: 135px;
+
+  border-radius: var(--br-rad);
+}
+
+.hd2,
+.hd4,
+.hd5 {
+  background-size: cover;
+}
+
+.hd1 {
+  background-image: url(Media/s-h2-bg/s1.png);
+}
+.hd2 {
+  background-image: url(Media/s-h2-bg/s2.jpg);
+}
+.hd3 {
+  background-image: url(Media/s-h2-bg/s3.png);
+}
+.hd4 {
+  background-image: url(Media/s-h2-bg/s4.png);
+}
+.hd5 {
+  background-image: url(Media/s-h2-bg/s5.png);
+  background-position: 0 20%;
+}
+
 .heading h2 {
   font-size: var(--fs-300);
   text-align: center;
+
+  border-bottom: 3px solid white;
+  -webkit-text-stroke: 1px black;
 }
 
-.content {
+.content,
+.nav-links {
   background-color: rgb(var(--bg-color-2));
   padding: 0.5rem 1rem;
   margin: 1rem 0;
   border-radius: var(--br-rad);
 }
 
-.content p {
-  margin: 0 0 8px 0;
-}
-
 .content h3 {
   margin-top: 1rem;
   font-size: var(--fs-250);
+  font-weight: var(--fw-400);
+}
+
+.content p {
+  margin: 0 0 8px 0;
 }
 
 .content > a {
@@ -120,6 +158,56 @@ main {
 }
 
 /* HERO */
+#hero {
+  overflow-x: hidden;
+  background-image: url(Media/hero-bg.JPG);
+  background-size: cover;
+  background-position: right;
+}
+h1 {
+  margin: 1rem;
+
+  text-align: center;
+  font-size: var(--fs-400);
+}
+.hero-p {
+  text-align: center;
+}
+.hero-kuva {
+  max-height: 60vh;
+  max-height: 60svh;
+
+  transform: translateX(-50%);
+  left: 50%;
+
+  position: absolute;
+  bottom: 0;
+}
+
+/* NAV */
+nav {
+  margin: 1rem;
+}
+.nav-links {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+
+  min-height: calc(100vh - 2rem);
+}
+nav a {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 1rem;
+
+  margin-left: 2rem;
+}
+
+.icon {
+  width: 4rem;
+}
 
 /* Arrow nav */
 .arrow-nav {
@@ -144,11 +232,6 @@ main {
 .arrow-nav:hover {
   scale: 1.3;
 }
-
-.icon {
-  width: 4rem;
-}
-
 .oma-kuva {
   width: 100%;
   margin: 1rem 0;
@@ -202,5 +285,87 @@ footer p.copyright {
   }
   100% {
     transform: translate(-100%, 0);
+  }
+}
+
+/* MEDIA QUERIES */
+@media (min-width: 1281px) and (pointer: fine) {
+  nav {
+    overflow: hidden;
+    position: relative;
+    min-height: calc(100vh - 2rem);
+    display: grid;
+    place-items: center;
+  }
+  .nav-links {
+    min-height: 0;
+    padding: 0;
+    transform: translateX(-150px);
+  }
+  .nav-links > a {
+    width: 300px;
+    aspect-ratio: 10 / 16;
+
+    justify-content: center;
+    flex-direction: column;
+    gap: 8rem;
+
+    position: absolute;
+
+    background-color: rgb(var(--bg-color-3));
+    border: 1px solid rgb(var(--tx-color));
+    border-radius: var(--br-rad);
+
+    transition: transform 1s, scale 0.5s, z-index 0.5s;
+  }
+
+  .icon {
+    height: 6rem;
+    width: 6rem;
+    filter: drop-shadow(5px 5px 10px rgb(var(--tx-color)));
+  }
+
+  .nav-links > a:nth-child(1) {
+    z-index: 10;
+  }
+  .nav-links > a:nth-child(2) {
+    transform: translate(-20px, 10px) rotate(-2deg);
+    z-index: 9;
+  }
+  .nav-links > a:nth-child(3) {
+    transform: translate(20px, 10px) rotate(2deg);
+    z-index: 8;
+  }
+  .nav-links > a:nth-child(4) {
+    margin-top: 0rem;
+    transform: translate(-40px, 20px) rotate(-5deg);
+    z-index: 7;
+  }
+  .nav-links > a:nth-child(5) {
+    margin-bottom: 0rem;
+    transform: translate(40px, 20px) rotate(5deg);
+    z-index: 6;
+  }
+
+  .nav-links:hover > a:nth-child(1) {
+    transform: translate(0px, -150px);
+  }
+  .nav-links:hover > a:nth-child(2) {
+    transform: translate(-250px, -75px) rotate(-20deg);
+  }
+  .nav-links:hover > a:nth-child(3) {
+    transform: translate(250px, -75px) rotate(20deg);
+  }
+  .nav-links:hover > a:nth-child(4) {
+    transform: translate(-400px, 100px) rotate(-40deg);
+  }
+  .nav-links:hover > a:nth-child(5) {
+    transform: translate(400px, 100px) rotate(40deg);
+  }
+
+  .nav-links > a:hover {
+    border: 1px solid red;
+    scale: 1.1;
+    z-index: 20;
   }
 }
