--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ img {
 /* HTML, :root and BODY */
 html {
   scroll-behavior: smooth;
+  scroll-padding-top: 1rem;
 }
 
 body {
@@ -81,7 +82,7 @@ body.dark-theme .icon {
   min-height: 100svh;
 }
 
-.content h3.tmar-8 {
+.content .tmar-8 {
   margin-top: 8px;
 }
 
@@ -115,6 +116,7 @@ main {
 }
 .hd2 {
   background-image: url(Media/s-h2-bg/s2.jpg);
+  background-attachment: fixed;
 }
 .hd3 {
   background-image: url(Media/s-h2-bg/s3.png);
@@ -125,6 +127,7 @@ main {
 .hd5 {
   background-image: url(Media/s-h2-bg/s5.png);
   background-position: 0 20%;
+  background-attachment: fixed;
 }
 
 .heading h2 {
@@ -132,7 +135,6 @@ main {
   text-align: center;
 
   border-bottom: 3px solid white;
-  -webkit-text-stroke: 1px black;
 }
 
 .content,
@@ -155,6 +157,34 @@ main {
 
 .content > a {
   display: block;
+}
+
+/* Arrow nav */
+.arrow-nav {
+  padding: 0.5rem;
+
+  position: fixed;
+  bottom: 1rem;
+  right: 1rem;
+
+  border: var(--br);
+  border-radius: 50px;
+
+  transition: scale 0.5s, transform 0.5s;
+  z-index: 999;
+}
+
+#arrow-nav-icon {
+  width: 2rem;
+  height: 2rem;
+}
+
+.arrow-nav:hover {
+  scale: 1.3;
+}
+
+.up {
+  transform: rotate(180deg);
 }
 
 /* HERO */
@@ -209,32 +239,23 @@ nav a {
   width: 4rem;
 }
 
-/* Arrow nav */
-.arrow-nav {
-  padding: 0.5rem;
-
-  position: fixed;
-  bottom: 1rem;
-  right: 1rem;
-
-  border: var(--br);
-  border-radius: 50px;
-
-  transition: scale 0.5s;
-  z-index: 999;
-}
-
-#arrow-nav-icon {
-  width: 2rem;
-  height: 2rem;
-}
-
-.arrow-nav:hover {
-  scale: 1.3;
-}
+/* MINA */
 .oma-kuva {
   width: 100%;
   margin: 1rem 0;
+}
+
+@media only screen and (min-width: 768px) {
+  .mina-flex {
+    display: flex;
+  }
+  .oma-kuva {
+    width: 50%;
+    margin: 0;
+  }
+  .info {
+    margin-left: 1rem;
+  }
 }
 
 .divider {
@@ -305,6 +326,8 @@ footer p.copyright {
   .nav-links > a {
     width: 300px;
     aspect-ratio: 10 / 16;
+
+    margin: 0;
 
     justify-content: center;
     flex-direction: column;
