--- a/style.css
+++ b/style.css
@@ -133,8 +133,7 @@ main {
 .heading h2 {
   font-size: var(--fs-300);
   text-align: center;
-
-  border-bottom: 3px solid white;
+  text-decoration: underline;
 }
 
 .content,
@@ -195,15 +194,16 @@ main {
   background-position: right;
 }
 h1 {
-  margin: 1rem;
+  margin-top: clamp(1rem, 10vw, 7rem);
 
   text-align: center;
-  font-size: var(--fs-400);
+  font-size: clamp(var(--fs-400), 10vw, var(--fs-800));
 }
 .hero-p {
   text-align: center;
+  font-size: clamp(var(--fs-125), 4vw, var(--fs-300));
 }
-.hero-kuva {
+.hero-photo {
   max-height: 60vh;
   max-height: 60svh;
 
@@ -314,7 +314,7 @@ footer p.copyright {
   nav {
     overflow: hidden;
     position: relative;
-    min-height: calc(100vh - 2rem);
+    min-height: 100vh;
     display: grid;
     place-items: center;
   }
@@ -390,5 +390,26 @@ footer p.copyright {
     border: 1px solid red;
     scale: 1.1;
     z-index: 20;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  body {
+    font-size: var(--fs-100);
+  }
+}
+
+@media only screen and (min-width: 1281px) {
+  .hero-photo {
+    left: 20%;
+  }
+
+  .hero-p {
+    position: absolute;
+    bottom: 20vh;
+    right: 10vw;
+    transform: rotate(10deg);
+
+    font-size: var(--fs-300);
   }
 }
