--- a/style.css
+++ b/style.css
@@ -91,7 +91,8 @@ a {
   color: rgb(var(--tx-color));
 }
 
-main {
+main,
+nav {
   width: min(800px, calc(100% - 2rem));
   margin: 0 auto;
 }
@@ -218,9 +219,6 @@ h1 {
 }
 
 /* NAV */
-nav {
-  margin: 1rem;
-}
 .nav-links {
   display: flex;
   flex-direction: column;
@@ -338,6 +336,7 @@ footer p.copyright {
     overflow: hidden;
     position: relative;
     min-height: 100vh;
+    width: 100%;
     display: grid;
     place-items: center;
   }
