--- a/style.css
+++ b/style.css
@@ -420,7 +420,7 @@ footer p.copyright {
   }
 }
 
-@media only screen and (min-width: 1281px) {
+@media only screen and (min-width: 1281px) and (min-height: 500px) {
   .hero-photo {
     left: 20%;
   }
