--- a/style.css
+++ b/style.css
@@ -82,110 +82,9 @@ body.dark-theme .icon {
   min-height: 100svh;
 }
 
-.content .tmar-8 {
-  margin-top: 8px;
-}
-
 /* Elements */
 a {
   color: rgb(var(--tx-color));
-}
-
-main,
-nav {
-  width: min(800px, calc(100% - 2rem));
-  margin: 0 auto;
-}
-
-/* Content */
-.heading {
-  display: grid;
-  place-items: center;
-  height: 135px;
-
-  border-radius: var(--br-rad);
-}
-
-.hd2,
-.hd4,
-.hd5 {
-  background-size: cover;
-  background-position: center;
-}
-
-.hd1 {
-  background-image: url(Media/s-h2-bg/s1.png);
-}
-.hd2 {
-  background-image: url(Media/s-h2-bg/s2.jpg);
-  background-attachment: fixed;
-}
-.hd3 {
-  background-image: url(Media/s-h2-bg/s3.png);
-}
-.hd4 {
-  background-image: url(Media/s-h2-bg/s4.png);
-}
-.hd5 {
-  background-image: url(Media/s-h2-bg/s5.png);
-  background-attachment: fixed;
-}
-
-.heading h2 {
-  color: white;
-  font-size: var(--fs-300);
-  text-align: center;
-  text-decoration: underline;
-}
-
-.content,
-.nav-links {
-  background-color: rgb(var(--bg-color-2));
-  padding: 0.5rem 1rem;
-  margin: 1rem 0;
-  border-radius: var(--br-rad);
-}
-
-.content h3 {
-  margin-top: 1rem;
-  font-size: var(--fs-250);
-  font-weight: var(--fw-400);
-}
-
-.content p {
-  margin: 0 0 8px 0;
-}
-
-.content > a {
-  display: block;
-}
-
-/* Arrow nav */
-.arrow-nav {
-  padding: 0.5rem;
-
-  position: fixed;
-  bottom: 1rem;
-  right: 1rem;
-
-  border: var(--br);
-  border-radius: 50px;
-
-  transition: scale 0.5s, transform 0.5s;
-  z-index: 999;
-}
-
-#arrow-nav-icon {
-  width: 2rem;
-  height: 2rem;
-}
-
-.arrow-nav:hover {
-  scale: 1.3;
-}
-
-.up {
-  transform: rotate(180deg);
 }
 
 /* HERO */
@@ -196,258 +95,22 @@ nav {
   background-position: right, right;
   background-attachment: fixed, fixed;
 }
-h1,
-.hero-p {
+h1 {
   text-align: center;
   color: white;
-}
-h1 {
   margin-top: clamp(1rem, 10vw, 7rem);
   font-size: clamp(var(--fs-400), 10vw, var(--fs-800));
 }
-.hero-p {
-  font-size: clamp(var(--fs-125), 4vw, var(--fs-300));
-}
-/* .hero-photo {
-  max-height: 60vh;
-  max-height: 60svh;
 
-  transform: translateX(-50%);
-  left: 50%;
-
-  position: absolute;
-  bottom: 0;
-} */
-
-/* NAV */
-nav {
-  position: relative;
-}
-
-.nav-links {
+/*  NOTHING  */
+.nothing {
   display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-
-  min-height: calc(100vh - 2rem);
-}
-nav a {
-  display: flex;
-  flex-direction: row-reverse;
-  justify-content: flex-end;
+  justify-content: center;
   align-items: center;
-  gap: 1rem;
-
-  transition: scale 0.5s;
 }
 
-nav a:hover {
-  scale: 1.01;
-}
-
-nav a h3 {
-  font-size: clamp(var(--fs-125), 4vw, var(--fs-200));
-  text-align: center;
-}
-
-.icon {
-  width: 4rem;
-  height: 4rem;
-}
-
-/* GALLERIES */
-
-.img-div > img {
-  object-fit: cover;
-  width: 100%;
-  height: 100%;
-  transition: scale 0.5s, opacity 1s;
-}
-
-.img-div > img,
-.overlay-photo > img {
-  opacity: 0;
-}
-
-.img-div > img.loaded,
-.overlay-photo > img.loaded {
-  opacity: 100%;
-}
-
-.img-div {
-  width: 100%;
-  aspect-ratio: 1 / 1;
-  overflow: hidden;
-  background-size: cover;
-}
-
-.img-div > img:hover {
-  scale: 1.2;
-  cursor: pointer;
-}
-
-.photogallery {
-  width: min(800px, 100%);
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-  gap: 1rem;
-
-  margin-top: 1rem;
-}
-
-.overlay {
-  display: none;
-  width: 100%;
-  height: 100%;
-  position: fixed;
-  top: 0;
-  left: 0;
-
-  overflow: hidden;
-
-  background-color: rgba(0, 0, 0, 0.69);
-}
-
-.overlay > button {
-  background: none;
-  border: transparent;
-}
-
-.overlay-photo {
-  width: 90%;
-  height: 90%;
-
-  overflow: hidden;
-
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.overlay-photo img {
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
-}
-
-.counter-img,
-.close,
-.prev-img,
-.next-img {
-  position: absolute;
-  z-index: 999;
-
-  line-height: 3rem;
-  font-size: 4rem;
-  color: white;
-  cursor: pointer;
-}
-
-.counter-img {
-  top: 1rem;
-  left: 1rem;
-}
-
-.close {
-  top: 1rem;
-  right: 1rem;
-}
-
-.prev-img,
-.next-img {
-  top: 50%;
-  transform: translateY(-50%);
-}
-
-.prev-img {
-  left: 1rem;
-}
-
-.next-img {
-  right: 1rem;
-}
-
-.load-animation {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  display: flex;
-  gap: 1rem;
-}
-
-.loading-ball {
-  width: 25px;
-  height: 25px;
-  border-radius: 50px;
-  background-color: rgb(var(--tx-color), 0.25);
-}
-
-@keyframes loadball {
-  0% {
-    scale: 1;
-    opacity: 1;
-  }
-  15% {
-    scale: 1.2;
-    opacity: 0.9;
-  }
-  30% {
-    scale: 1.4;
-    opacity: 0.8;
-  }
-  45% {
-    scale: 1.2;
-    opacity: 0.9;
-  }
-  60% {
-    scale: 1;
-    opacity: 1;
-  }
-}
-
-.load-animation > .loading-ball:nth-child(1) {
-  animation: loadball 1.5s linear 0s infinite;
-}
-.load-animation > .loading-ball:nth-child(2) {
-  animation: loadball 1.5s linear 0.5s infinite;
-}
-.load-animation > .loading-ball:nth-child(3) {
-  animation: loadball 1.5s linear 1s infinite;
-}
-
-.videogalleria,
-iframe {
-  width: 100%;
-  height: auto;
-  aspect-ratio: 16/9;
-  margin-bottom: 0.5rem;
-}
-
-/* MINA */
-.oma-kuva {
-  width: 100%;
-  margin: 1rem 0;
-}
-
-@media only screen and (min-width: 768px) {
-  .mina-flex {
-    display: flex;
-  }
-  .oma-kuva {
-    width: 50%;
-    margin: 0;
-  }
-  .info {
-    margin-left: 1rem;
-  }
-}
-
-.divider {
-  height: 3px;
-  background-color: rgb(var(--tx-color));
-  margin: 1rem 0;
+.nothing p {
+  font-size: 3rem;
 }
 
 /*  FOOTER  */
@@ -495,112 +158,8 @@ footer p.copyright {
   }
 }
 
-/* MEDIA QUERIES */
-@media (min-width: 1281px) and (pointer: fine) and (min-height: 800px) {
-  nav {
-    overflow: hidden;
-    position: relative;
-    min-height: 100vh;
-    width: 100%;
-    display: grid;
-    place-items: center;
-    background-color: rgb(var(--bg-color-1));
-  }
-  .nav-links {
-    min-height: 0;
-    padding: 0;
-    transform: translateX(-150px);
-  }
-  .nav-links > a {
-    width: 300px;
-    aspect-ratio: 10 / 16;
-
-    margin: 0;
-
-    justify-content: center;
-    flex-direction: column;
-    gap: 8rem;
-
-    position: absolute;
-
-    background-color: rgb(var(--bg-color-3));
-    border: 1px solid rgb(var(--tx-color));
-    border-radius: var(--br-rad);
-
-    transition: transform 1s, scale 0.5s, z-index 0.5s;
-  }
-
-  .nav-links > a > h3 {
-    margin: 0 1rem;
-  }
-
-  .icon {
-    height: 6rem;
-    width: 6rem;
-  }
-
-  .nav-links > a:nth-child(1) {
-    z-index: 10;
-  }
-  .nav-links > a:nth-child(2) {
-    transform: translate(-20px, 10px) rotate(-2deg);
-    z-index: 9;
-  }
-  .nav-links > a:nth-child(3) {
-    transform: translate(20px, 10px) rotate(2deg);
-    z-index: 8;
-  }
-  .nav-links > a:nth-child(4) {
-    margin-top: 0rem;
-    transform: translate(-40px, 20px) rotate(-5deg);
-    z-index: 7;
-  }
-  .nav-links > a:nth-child(5) {
-    margin-bottom: 0rem;
-    transform: translate(40px, 20px) rotate(5deg);
-    z-index: 6;
-  }
-
-  .nav-links:hover > a:nth-child(1) {
-    transform: translate(0px, -150px);
-  }
-  .nav-links:hover > a:nth-child(2) {
-    transform: translate(-250px, -75px) rotate(-20deg);
-  }
-  .nav-links:hover > a:nth-child(3) {
-    transform: translate(250px, -75px) rotate(20deg);
-  }
-  .nav-links:hover > a:nth-child(4) {
-    transform: translate(-400px, 100px) rotate(-40deg);
-  }
-  .nav-links:hover > a:nth-child(5) {
-    transform: translate(400px, 100px) rotate(40deg);
-  }
-
-  .nav-links > a:hover {
-    border: 1px solid red;
-    scale: 1.1;
-    z-index: 20;
-  }
-}
-
 @media only screen and (min-width: 768px) {
   body {
     font-size: var(--fs-100);
-  }
-}
-
-@media only screen and (min-width: 1281px) and (min-height: 500px) {
-  /* .hero-photo {
-    left: 20%;
-  } */
-
-  .hero-p {
-    position: absolute;
-    bottom: 20vh;
-    right: 10vw;
-    transform: rotate(10deg);
-
-    font-size: var(--fs-300);
   }
 }
